# Blockchain

./: .gitignore  CMakeLists.txt  sandbox.cpp
src/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  CMakeLists.txt  TODO.md  main.cpp
src/data_structures/: CMakeLists.txt
tests/: CMakeLists.txt  FailureCollection.cpp  helpers.cpp  helpers.hpp  test_blockchain.cpp
